# bebop_pos_ctrl

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
config/: list.yaml
include/: bebop_pos_ctrl.h  localization.h
include/bebop_pos_ctrl/: bebop_pos_ctrl.h
launch/: bebop_pos_ctrl.launch  get_pos_from_aruco.launch
msg/: debug.msg
src/: bebop_pos_ctrl.cpp  get_pos_from_aruco.cpp  get_pos_uav_node.cpp  localization.cpp  position_control.cpp
